--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase": "^9.8.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
